adjust monster images

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <br><hr>
               <div id="fightLog"></div>
               <div id = "monsters"></div>
-              <!-- <img id="dragon" class="monsterImg" src="img/dragon.png" alt="an image of a dragon">
+              <img id="dragon" class="monsterImg" src="img/dragon.png" alt="an image of a dragon">
               <img id="deadDragon" class="monsterImg" src="img/deadDragon.png" alt="an image of a dead dragon">
               <img id="goblin" class="monsterImg" src="img/goblin.png" alt="an image of a goblin">
               <img id="deadGoblin" class="monsterImg" src="img/deadGoblin.png" alt="an image of a dead goblin">
@@ -90,11 +90,7 @@
               <img id="skeleton" class="monsterImg" src="img/skeleton.png" alt="an image of a skeleton">
               <img id="deadSkeleton" class="monsterImg" src="img/deadSkeleton.png" alt="an image of a dead skeleton">
               <img id="golem" class="monsterImg" src="img/golem.png" alt="an image of a golem">
-              <img id="deadGolem" class="monsterImg" src="img/deadGolem.png" alt="an image of a dead golem"> -->
-              <br><hr>
-              <div id = "friendlies"></div>
-              <br><hr>
-
+              <img id="deadGolem" class="monsterImg" src="img/deadGolem.png" alt="an image of a dead golem">
               <br><hr>
               <div id = "items"></div>
 
