comment out background pictures

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="row">
             <div id="visualArea" class="col-md-3">
               <div id="backgroundPicture" class="row">
-                <img class="visual" src="img/mapOne.jpg" alt="An image of a forest">
+                <!-- <img class="visual" src="img/mapOne.jpg" alt="An image of a forest">
                 <img class="visual" src="img/mapTwo.jpg" alt="An image of a forest floor">
                 <img class="visual" src="img/mapThree.jpg" alt="An image of a purple forest">
                 <img class="visual" src="img/mapFour.jpg" alt="An image of a dark forest">
@@ -57,7 +57,7 @@
                 <img class="visual" src="img/mapNine.jpg" alt="An image of a stalagtite cave">
                 <img class="visual" src="img/mapTen.jpg" alt="An image of a mountain">
                 <img class="visual" src="img/mapEleven.jpg" alt="An image of a cave entrance">
-                <img class="visual" src="img/mapTwelve.jpg" alt="An image of a green mountain">
+                <img class="visual" src="img/mapTwelve.jpg" alt="An image of a green mountain"> -->
               </div>
               <div id="itemArea" class="row">
                 <table class="table">
